crates/plotnik-lib/tests/02-parser/recovery.txt
Q = (function_declaration name: (identifier) @name
------------------ DIAGNOSTICS -------------------
error: missing closing `)`
 --> query.ptk:1:5
  |
1 | Q = (function_declaration name: (identifier) @name
  |     -^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     node started here
  |
help: add `)` to close the node
